Fix featured image cropping issue by changing object-fit to contain
- Changed object-fit from 'cover' to 'contain'
- Prevents image from being cropped
- Shows full image within the container

--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,7 @@ body {
     width: 100%;
     height: auto;
     display: block;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 /* Wedding Info Section */
